@@ -180,9 +180,6 @@ class ImagingMenu:
         self.default_item_wol = 0  # the menu default entry on WOL
         self.splashimage = None  # the menu splashimage
         self.message = None
-        self.colors = {  # menu colors
-            'normal': {'fg': 7, 'bg': 1},
-            'highlight': {'fg': 15, 'bg': 3}}
         self.keyboard = None  # the menu keymap, None is C
         self.hidden = False  # do we hide the menu ?
         self.language = 'C'  # Menu language
@@ -298,62 +295,49 @@ class ImagingMenu:
 
     def buildMenu(self):
         """
-        @return: the GRUB boot menu as a string encoded using CP-437
+        @return: the SYSLINUX boot menu as a string encoded using CP-437
         @rtype: str
         """
 
         # takes global items, one by one
         buf = '# Auto-generated by Pulse 2 Imaging Server on %s \n\n' % time.asctime()
+        buf += 'UI vesamenu.c32\n'
+        buf += 'PROMPT 0\n'
 
         # the key mapping
-        if PackageServerConfig().pxe_keymap == 'fr_FR':
-            buf += 'kbdfr\n'
+        buf += 'KBDMAP %s.ktl\n' % PackageServerConfig().pxe_keymap
 
         # PXE Password entry if pxe_password is set
         if PackageServerConfig().pxe_password != '':
-            buf += 'menupwd L=%s\n' % PackageServerConfig().pxe_keymap
+            buf += 'MENU MASTER PASSWD %s\n' % PackageServerConfig().pxe_password
 
         # the menu timeout : warning, 0 means "do not wait !"
-        if self.timeout:
-            buf += 'timeout %s\n' % self.timeout
+        if self.timeout == '0':
+            buf += 'TIMEOUT 1\n'
+        else:
+            buf += 'TIMEOUT %d\n' % (int(self.timeout) * 10)
 
         # the menu default item
-        buf += 'default %s\n' % self.default_item
+        buf += 'DEFAULT %s\n' % self.default_item
 
         # the menu splash image
         if self.splashimage:
-            buf += self._applyReplacement('splashimage %s\n' % self.splashimage)
+            buf += self._applyReplacement('MENU BACKGROUND %s\n' % self.splashimage)
 
-        # the menu colors
-        buf += 'color %d/%d %d/%d\n' % (
-            self.colors['normal']['fg'],
-            self.colors['normal']['bg'],
-            self.colors['highlight']['fg'],
-            self.colors['highlight']['bg'])
+        # the menu setup
+        buf += 'MENU WIDTH 78\n'
+        buf += 'MENU MARGIN 4\n'
+        buf += 'MENU ROWS 10\n'
+        buf += 'MENU VSHIFT 10\n'
+        buf += 'MENU TIMEOUTROW 18\n'
+        buf += 'MENU TABMSGROW 16\n'
+        buf += 'MENU CMDLINEROW 16\n'
+        buf += 'MENU HELPMSGROW 21\n'
+        buf += 'MENU HELPMSGENDROW 29\n'
 
         # do we hide the menu ? Splash screen will still be displayed
         if self.hidden:
-            buf += 'hiddenmenu\n'
-
-        # can the user access to the grub command line ?
-        if self.bootcli:
-            buf += 'nosecurity\n'
-
-        # are we dropped to a shell after having booted ?
-        if self.disklesscli:
-            self.diskless_opts.append('revodebug')
-
-        # Shall be fix NT Boot Loaders ?
-        if self.ntblfix:
-            self.diskless_opts.append('revontblfix')
-
-        # Shall be fix check the disk size ?
-        if self.dont_check_disk_size:
-            self.diskless_opts.append('revonospc')
-
-        # Use a specifix ethernet card
-        if self.ethercard:
-            self.diskless_opts.append('revoeth%d' % self.ethercard)
+            buf += 'MENU HIDDEN\n'
 
         # then write items
         indices = self.menuitems.keys()
@@ -378,7 +362,7 @@ class ImagingMenu:
         Write the boot menu to disk
         """
         if self.mac:
-            filename = os.path.join(self.config.imaging_api['base_folder'], self.config.imaging_api['bootmenus_folder'], pulse2.utils.reduceMACAddress(self.mac))
+            filename = os.path.join(self.config.imaging_api['base_folder'], self.config.imaging_api['bootmenus_folder'], pulse2.utils.normalizeMACAddressForPXELINUX(self.mac))
             self.logger.debug('Preparing to write boot menu for computer MAC %s into file %s' % (self.mac, filename))
         else:
             filename = os.path.join(self.config.imaging_api['base_folder'], self.config.imaging_api['bootmenus_folder'], self.DEFAULT_MENU_FILE)
@@ -592,10 +576,10 @@ class ImagingItem:
         """
         self.logger = logging.getLogger('imaging')
         self._convertEntry(entry)
-        self.title = entry['name']  # the item title
-        self.desc = entry['desc']  # the item desc
-        assert(type(self.title) == unicode)
-        assert(type(self.desc) == unicode)
+        self.label = entry['name']  # the item label
+        self.menulabel = entry['desc']  # the item menulabel
+        assert(type(self.label) == unicode)
+        assert(type(self.menulabel) == unicode)
         self.uuid = None
 
     def __str__(self):
@@ -646,16 +630,16 @@ class ImagingBootServiceItem(ImagingItem):
         @param entry : a ImagingItem
         """
         ImagingItem.__init__(self, entry)
-        self.value = entry['value']  # the GRUB command line
+        self.value = entry['value']  # the PXELINUX command line
         assert(type(self.value) == unicode)
 
     def getEntry(self, protocol, network = True):
         """
-        Return the entry, in a GRUB compatible format
+        Return the entry, in a SYSLINUX compatible format
         """
-        buf = 'title %s\n' % self.title
-        if self.desc:
-            buf += 'desc %s\n' % self.desc
+        buf = 'LABEL %s\n' % self.label
+        if self.menulabel:
+            buf += 'MENU LABEL %s\n' % self.menulabel
         if self.value:
             buf += self.value + '\n'
         return self._applyReplacement(buf, network)
@@ -753,18 +737,12 @@ class ImagingImageItem(ImagingItem):
         @param network: if True, build a menu for a network restoration , else
                         build a menu for a CD-ROM restoration
 
-        @return: the entry, in a GRUB compatible format.
+        @return: the entry, in a SYSLINUX compatible format.
         """
-        buf = 'title %s\n' % self.title
-        if self.desc:
-            buf += 'desc %s\n' % self.desc
-        if protocol not in self.PROTOCOL:
-            protocol = 'nfs'
-        replacement = self.PROTOCOL[protocol]
-        # Add REVOWAIT on kernel command line for MTFTP
-        if protocol == 'mtftp':
-            replacement +=  ' ' + 'revowait=##REVOWAIT##'
-        buf += self.CMDLINE.replace('##PROTOCOL##', replacement)
+        buf = 'LABEL %s\n' % self.label
+        buf += 'MENU LABEL %s\n' % self.menulabel
+        if self.label:
+            buf += 'LABEL %s\n' % self.label
         return self._applyReplacement(buf, network)
 
     def write(self, config):
@@ -836,7 +814,7 @@ def changeDefaultMenuItem(macaddress, value):
     logger = logging.getLogger('imaging')
     filename = os.path.join(config.imaging_api['base_folder'],
                             config.imaging_api['bootmenus_folder'],
-                            pulse2.utils.reduceMACAddress(macaddress))
+                            pulse2.utils.normalizeMACAddressForPXELINUX(macaddress))
     logger.debug('Changing default boot menu item of computer MAC %s'
                  % macaddress)
     newlines = ''
@@ -966,18 +944,24 @@ drbl-ocs -b -g auto -e1 auto -e2 -x -j2 --clients-to-wait %s -l en_US.UTF-8 -h "
                                         self.disk[0],
                                         self.menu['master'])
         self.template="""
-timeout 10
-default 0
-splashimage /bootloader/bootsplash.xpm
-color 7/1 15/3
+UI vesamenu.c32
+TIMEOUT 100
+MENU BACKGROUND /bootloader/bootsplash.png
+MENU WIDTH 78
+MENU MARGIN 4
+MENU ROWS 10
+MENU VSHIFT 10
+MENU TIMEOUTROW 18
+MENU TABMSGROW 16
+MENU CMDLINEROW 16
+MENU HELPMSGROW 21
+MENU HELPMSGENDROW 29
 
-title Restore Multicast
-
-desc %s
-
-kernel (nd)/davos/vmlinuz boot=live config noswap edd=on nomodeset nosplash noprompt vga=788 fetch=tftp://%s/davos/fs.squashfs mac=%s revorestorenfs image_uuid=%s davos_action=RESTORE_IMAGE_MULTICAST
-
-initrd (nd)/davos/initrd.img
+LABEL multicast
+MENU LABEL Restore Multicast %s
+KERNEL ../davos/vmlinuz
+APPEND boot=live config noswap edd=on nomodeset nosplash noprompt vga=788 fetch=tftp://%s/davos/fs.squashfs mac=%s revorestorenfs image_uuid=%s davos_action=RESTORE_IMAGE_MULTICAST
+INITRD ../davos/initrd.img
 """
 
     def ipV4toDecimal(self, ipv4):
@@ -998,6 +982,7 @@ initrd (nd)/davos/initrd.img
         for k, v in self.menu['computer'].iteritems():
             if self.isValidIPv4Address(v):
                 mac = pulse2.utils.reduceMACAddress(k)
+                filename = pulse2.utils.normalizeMACAddressForPXELINUX(mac)
                 self.logger.debug("create bootMenu [%s] Computer ip [%s]"%(k,v))
                 menuval= self.template%( self.menu['description'],
                                 self.public_ip,
@@ -1005,7 +990,7 @@ initrd (nd)/davos/initrd.img
                                 self.menu['master']
                                 )
                 self.logger.debug("bootMenu [%s]\n%s"%(mac, menuval))
-                if self.writeMenuMulticast( mac, menuval) == False:
+                if self.writeMenuMulticast( filename, menuval) == False:
                     rest = False
             else:
                 self.logger.debug("mac [%s] ip [%s] non selected"%(k,v))
