@@ -10,3 +10,4 @@ Pulse 2 3.3.0
  * [BUGFIX]  Fix restore of a specific version of a file
  * [BUGFIX]  Fix permissions of restored files
  * [BUGFIX]  Fix bootservices in imaging for use with davos
+ * [FEATURE] Replacement of historic Pulse PXE by PXELINUX
